--- a/HPL.vcxproj.filters
+++ b/HPL.vcxproj.filters
@@ -1576,4 +1576,7 @@
       <Filter>Gui</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
